--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+  <meta name="google-site-verification" content="cO5V0YdwVQ0Isemjyd_Wp-mC8e3S5tisbqgqev1oGvg" /> 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HOME | DMOSNY</title>
