--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="css/ad.css">
   <link rel="stylesheet" href="css/mq.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="shortcut icon" href="img/dmos_favicon.png" />
   <script defer src="JS/banner.js"></script>
 </head>
 <body>
