--- a/index.html
+++ b/index.html
@@ -394,19 +394,19 @@
     <p class="copy">&copy; DMOS All Rights Reserved</p>
 
     <div class="footer-social-icons">
-      <a href="your-facebook-url" class="social-icon" target="_blank" aria-label="Facebook">
+      <a href="https://www.instagram.com/dmosnyc/" class="social-icon" target="_blank" aria-label="Facebook">
         <i class="fab fa-facebook-f"></i>
       </a>
-      <a href="your-twitter-url" class="social-icon" target="_blank" aria-label="Twitter">
+      <a href="https://www.instagram.com/dmosnyc/" class="social-icon" target="_blank" aria-label="Twitter">
         <i class="fab fa-twitter"></i>
       </a>
-      <a href="your-instagram-url" class="social-icon" target="_blank" aria-label="Instagram">
+      <a href="https://www.instagram.com/dmosnyc/" class="social-icon" target="_blank" aria-label="Instagram">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="your-linkedin-url" class="social-icon" target="_blank" aria-label="LinkedIn">
+      <a href="https://www.instagram.com/dmosnyc/" class="social-icon" target="_blank" aria-label="LinkedIn">
         <i class="fab fa-linkedin-in"></i>
       </a>
-      <a href="your-youtube-url" class="social-icon" target="_blank" aria-label="YouTube">
+      <a href="https://www.youtube.com/@DMOSNYC" class="social-icon" target="_blank" aria-label="YouTube">
         <i class="fab fa-youtube"></i>
       </a>
     </div>
